# circuitRAG

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
.vibecheck/: firewall.json
.vibecheck/flow/: config.json
docs/: ARCHITECT-TALKING-POINTS.md  AUDIT-2026-04-23.md  DEMO-DAY-1.5.md  DEMO-DAY-1.md  DEMO-DAY-2-CHAOS.md  DEMO-DAY-3-MCP.md  GAP-ANALYSIS.md  INSTALL.md  TECHSTACK.md
docs/architecture/: C4-component.md  C4-container.md  C4-context.md
docs/design-areas/: CCB-cognitive-circuit-breaker.md  README.md
docs/methodologies/: design-methodologies-and-scenarios.md
docs/runbooks/: DR_RUNBOOK.md  INCIDENT_RESPONSE.md
docs/scenarios/: README.md  phase-01-edge-traffic-security.md  phase-02-kafka-event-architecture.md  phase-02-microservices.md  phase-03-circuit-breakers.md  phase-04-rag-core.md  (+15 more)
libs/py/: README.md  pyproject.toml
libs/py/documind_core/: __init__.py  ai_governance.py  body_limit.py  breakers.py  cache.py  circuit_breaker.py  config.py  db_client.py  encryption.py  exceptions.py  idempotency.py  idempotency_middleware.py  kafka_client.py  logging_config.py  middleware.py  observability.py  rate_limiter.py  schemas.py
libs/py/tests/: conftest.py  test_ai_governance.py  test_breakers.py  test_integration_inference.py  test_poisoning_defense.py  test_rls_isolation.py
mcp/: __init__.py  client.py  server_hr.py
scripts/: aiops_retrain_trigger.py  gen-dev-keys.sh  gen-proto.sh  migrate.py  postgres-init.sql  seed_demo.py  smoke_test.py
(+227 files in other folders)
